[gd_scene load_steps=33 format=4 uid="uid://cnvnbsupfdau4"]

[ext_resource type="Script" uid="uid://cjab70obtn2ow" path="res://game/game.gd" id="1_l8g03"]
[ext_resource type="Texture2D" uid="uid://lrapmwqvv453" path="res://menu/wave.png" id="1_u5opy"]
[ext_resource type="Script" uid="uid://d2c82s4i8k7dc" path="res://game/room_selector.gd" id="2_4cobl"]
[ext_resource type="Script" uid="uid://dx5wdsegef6t2" path="res://game/end_wave.gd" id="2_dxrkv"]
[ext_resource type="PackedScene" uid="uid://68en2fypp2j5" path="res://upgrades/UpgradeUI.tscn" id="3_dakft"]
[ext_resource type="Script" uid="uid://b6y06i07h8uw3" path="res://game/game_end.gd" id="3_u5opy"]
[ext_resource type="PackedScene" uid="uid://jbioikw54jg4" path="res://game_end/game_end.tscn" id="4_dxrkv"]
[ext_resource type="Shader" uid="uid://bf5fwipxptqdn" path="res://upgrades/blur.gdshader" id="4_u5opy"]
[ext_resource type="Texture2D" uid="uid://b4ku0d1fup6rh" path="res://assets/background/cloud_1.png" id="8_dxwpq"]
[ext_resource type="Texture2D" uid="uid://c0mf8qj5fny5k" path="res://assets/rooms/empty_scaled.png" id="12_qf6n1"]
[ext_resource type="Texture2D" uid="uid://dkxam7a5hi4pc" path="res://assets/rooms/cannon_scaled.png" id="13_vsp63"]
[ext_resource type="Texture2D" uid="uid://oyj7iolb3f0y" path="res://assets/rooms/seashell1_scaled.png" id="14_b686c"]
[ext_resource type="Texture2D" uid="uid://ldwldwfriifr" path="res://assets/rooms/slingshot_scaled.png" id="15_hb504"]
[ext_resource type="Resource" uid="uid://oswxf34lko23" path="res://assets/resources/rooms/cannon.tres" id="16_mhvfb"]
[ext_resource type="Script" uid="uid://c0htur6o5hwgt" path="res://game/tower.gd" id="17_ln7ps"]

[sub_resource type="Gradient" id="Gradient_u8s88"]
colors = PackedColorArray(0.301961, 0.67451, 0.941176, 1, 0.4888, 0.8648, 0.94, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dxwpq"]
gradient = SubResource("Gradient_u8s88")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnu2h"]
shader = ExtResource("4_u5opy")
shader_parameter/amount = 2.5

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_u8s88"]

[sub_resource type="Gradient" id="Gradient_dxwpq"]
colors = PackedColorArray(0.301961, 0.67451, 0.941176, 1, 0.409467, 0.166, 0.83, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_mhvfb"]
gradient = SubResource("Gradient_dxwpq")

[sub_resource type="Gradient" id="Gradient_jc4t8"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.831169)
colors = PackedColorArray(0.0235294, 0.258824, 0.45098, 1, 0.498039, 0.803922, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y36n6"]
gradient = SubResource("Gradient_jc4t8")
width = 1
height = 250
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="Animation" id="Animation_y36n6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameStartBits/GameStartOverlay:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -95)]
}

[sub_resource type="Animation" id="Animation_u5opy"]
resource_name = "on_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameStartBits/GameStartOverlay:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -95), Vector2(1, 1080)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l8g03"]
_data = {
&"RESET": SubResource("Animation_y36n6"),
&"on_start": SubResource("Animation_u5opy")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b686c"]
resource_name = "cannon"
texture = ExtResource("13_vsp63")
texture_region_size = Vector2i(240, 181)
0:0/0 = 0
0:0/0/custom_data_0 = ExtResource("16_mhvfb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hb504"]
resource_name = "seashell"
texture = ExtResource("14_b686c")
texture_region_size = Vector2i(240, 181)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ee6o4"]
resource_name = "slingshot"
texture = ExtResource("15_hb504")
texture_region_size = Vector2i(240, 181)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_hb504"]
tile_size = Vector2i(240, 181)
custom_data_layer_0/name = "Room"
custom_data_layer_0/type = 24
sources/0 = SubResource("TileSetAtlasSource_b686c")
sources/1 = SubResource("TileSetAtlasSource_hb504")
sources/2 = SubResource("TileSetAtlasSource_ee6o4")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qf6n1"]
resource_name = "bg"
texture = ExtResource("12_qf6n1")
texture_region_size = Vector2i(240, 181)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_vsp63"]
tile_size = Vector2i(240, 181)
sources/0 = SubResource("TileSetAtlasSource_qf6n1")

[node name="Game" type="Node2D"]
script = ExtResource("1_l8g03")

[node name="Sky" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Sky"]
offset_left = 1920.0
offset_right = 3000.0
offset_bottom = 1920.0
rotation = 1.5708
texture = SubResource("GradientTexture1D_dxwpq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Rooms" type="HBoxContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -125.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("2_4cobl")

[node name="Button" type="Button" parent="."]
offset_left = 1810.0
offset_top = 57.0
offset_right = 1892.0
offset_bottom = 88.0
text = "End wave"
script = ExtResource("2_dxrkv")

[node name="Button2" type="Button" parent="."]
offset_left = 1766.0
offset_top = 16.0
offset_right = 1897.0
offset_bottom = 47.0
text = "End Game (loss)"
script = ExtResource("3_u5opy")

[node name="UpgradeUi" parent="." instance=ExtResource("3_dakft")]
visible = false

[node name="GameEnd" parent="." instance=ExtResource("4_dxrkv")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
material = SubResource("ShaderMaterial_lnu2h")
anchor_mode = 0

[node name="ground" type="Node2D" parent="."]
position = Vector2(197, 210)

[node name="Sandbed" type="Sprite2D" parent="ground"]
position = Vector2(763, 784.875)
scale = Vector2(1920, 171.75)
texture = SubResource("PlaceholderTexture2D_u8s88")

[node name="BgWater" type="Sprite2D" parent="ground"]
position = Vector2(762.985, 572.041)
rotation = 1.5708
scale = Vector2(1.00032, 1920.22)
texture = SubResource("GradientTexture1D_mhvfb")

[node name="cloud" type="Sprite2D" parent="ground"]
position = Vector2(1357, 388)
texture = ExtResource("8_dxwpq")

[node name="EnemySpawnPoints" type="Node2D" parent="."]
position = Vector2(870, 570)

[node name="Floor1" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2(1131, 306)

[node name="Floor2" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2(1130, 192)

[node name="Floor3" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2(1126, 78)

[node name="Floor4" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2(1129, -32)

[node name="Floor5" type="Node2D" parent="EnemySpawnPoints"]
position = Vector2(1126, -148)

[node name="GameStartBits" type="CanvasLayer" parent="."]
visible = false

[node name="GameStartOverlay" type="TextureRect" parent="GameStartBits"]
clip_children = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -95.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u5opy")

[node name="Sea gradient" type="TextureRect" parent="GameStartBits/GameStartOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_y36n6")

[node name="GameStartAnimation" type="AnimationPlayer" parent="GameStartBits/GameStartOverlay"]
root_node = NodePath("../../..")
libraries = {
&"": SubResource("AnimationLibrary_l8g03")
}
autoplay = "on_start"

[node name="TowerMap" type="TileMapLayer" parent="."]
position = Vector2(93, 312)
scale = Vector2(0.55, 0.55)
tile_set = SubResource("TileSet_hb504")
script = ExtResource("17_ln7ps")

[node name="AvailableRooms" type="TileMapLayer" parent="TowerMap"]
show_behind_parent = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAABAAQAAAAAAAAAAAABAAMAAAAAAAAAAAABAAIAAAAAAAAAAAABAAEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_vsp63")

[connection signal="room_selected" from="UI/Rooms" to="TowerMap" method="set_current_room"]
[connection signal="pressed" from="Button" to="Button" method="on_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="on_pressed"]
